# VirtAppRelease

./: .gitignore  BUILD_v2.6_SCRIPT.bat  CHANGELOG.md  CHANGELOG_v3.1.md  CMakeLists.txt  COMPILE_INSTRUCTIONS.md  INSTALL_FIRST.bat  PROJECT_STATE.md  README.md  RELEASE_NOTES_v3.3.md  RELEASE_NOTES_v3.4.md  RELEASE_NOTES_v3.5.md  ROADMAP.md  UPDATE_TECHNICAL.md  build_output.txt  command_cmd.bat  config.template.txt  config.txt  main.py  phototest.tif  requirements.txt  start.bat  update.bat
.github/instructions/: 1337.instructions.md
Bot/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  VirtApp.sln  VirtApp.vcxproj  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  logs.txt
Bot/Bot/: CMakeCache.txt  VirtApp.vcxproj.filters
Bot/Release/: update.bat
Documents/: ANALYSIS.md  CHANGELOG_v3.0.md  COMPILE_v2.6_INSTRUCTIONS.md  CONTRIBUTING.md  DEPLOYMENT_v2.6.md  MANUAL_COMPILE_v2.6.md  PROJECT_AUDIT.md  PROJECT_STATE.md  README.md  RELEASE_NOTES_v3.5.md  ROADMAP.md  UPDATE_PUBLIC.md
build_final/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  VirtApp.sln  VirtApp.vcxproj  VirtApp.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_final/Release/: .gitignore  README.md  config.template.txt  credentials.json  rage_ok.ahk  update.bat
build_final/Release/scripts/: set_local_time.py
build_final/VirtApp.dir/Release/: VirtApp-3.5.3.exe.recipe  VirtApp.exe.recipe
build_final/VirtApp.dir/Release/VirtApp.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_final/x64/Release/ALL_BUILD/: ALL_BUILD.recipe
build_final/x64/Release/ZERO_CHECK/: ZERO_CHECK.recipe
build_final/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
build_fresh/: CMakeCache.txt
build_new/: CMakeCache.txt
build_v2.6/: CMakeCache.txt
config/: config.txt
data/epic/: README.txt
scripts/: credentials.json  epic_auth.py  get_appartments.py  get_config.py  get_server_from_sheet.py  getlvl.py  getmaxlvl.py  main.py  set_local_time.py  update_gta_settings.py
src/: DashboardUI.h  ScreenScaner.cpp  ScreenScaner.h  VirtApp.h  main.cpp
